# blueprint-modular

./: .cursorrules  .env.example  .env.local.example  .gitignore  AGENTS.md  BLUEPRINT_MISSION.md  CURSOR_BPM.md  CURSOR_PROMPT_AI_STRATEGY.md  CURSOR_PROMPT_BLUEPRINT_AI.md  CURSOR_PROMPT_SANDBOX_AI_GENERATOR.md  DEPLOIEMENT_DOMAINE.md  DEPLOY.md  MISSING_COMPONENTS.md  PUBLISH_PYPI.md  README.md  SYNTHESE_RESTE_A_FAIRE.md  app.py  cheat-sheet.html  components.html  deploy.sh  deploy_blueprint_modular.ps1  deploy_blueprint_modular.sh  deploy_blueprint_modular_full.ps1  doc.css  ecosystem.config.js  index.html  middleware.ts  next.config.mjs  nginx-bpm-domain-https.conf.example  nginx-bpm-domain.conf.example  package-lock.json  package.json  pyproject.toml  reference.html  requirements.txt  tsconfig.json  tsconfig.tsbuildinfo
api-docs/: README.txt  components.html  landing.html  reference.html
api-reference/: charts.html  chat.html  config.html  data.html  inputs.html  layout.html  media.html  metrics.html  panels.html  status.html  text.html
app/: globals.css  layout.tsx  manifest.ts  sitemap.ts
blueprint-maker/: README.md
bpm/: __init__.py  _doc_components.py
components/: AppLayoutClient.tsx  ChunkErrorBoundary.tsx  ChunkLoadHandler.tsx  DocumentAnalysisImport.tsx  NotificationBell.css  NotificationBell.tsx  NotificationProviders.tsx  PwaSwRegister.tsx  StartBuildingBlock.tsx  ThemeProvider.tsx
contexts/: NotificationHistoryContext.tsx
deploy/: CHECKLIST.md  DEPLOY_APP.md  README.md  REDEPLOY-NEW-SERVER.md  app-env.example  concepts.html  deploy-from-git.sh  (+12 more)
(+655 files in other folders)
