[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blueprint-modular"
version = "0.1.11"
description = "Briques Python prêtes à l'emploi pour vos interfaces de données"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Rémi", email = "contact@blueprint-modular.com" }]
keywords = ["dashboard", "ui", "framework", "python", "data"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "ruff"]

[project.scripts]
bpm = "bpm.cli:main"

[project.urls]
Homepage = "https://blueprint-modular.com"
Documentation = "https://docs.blueprint-modular.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["bpm*"]
